Cards layout for brands, hotels and hotel's floors (images for assets not included yet - alert and brand/hotel/floor images). Fixed <hr> position to match comps better. Fixed horizontal scroll-bar which will show up only when Chrome's windows is smaller than 1920px width.

--- a/Source/FacilityManagementWebsite/SmartHotel.FacilityManagementWeb/SmartHotel.FacilityManagementWeb/ClientApp/src/app/tenant/tenant.component.css
+++ b/Source/FacilityManagementWebsite/SmartHotel.FacilityManagementWeb/SmartHotel.FacilityManagementWeb/ClientApp/src/app/tenant/tenant.component.css
@@ -1,6 +1,5 @@
-section {
-  margin: 4px 64px 0 26px;
-}
+
+/* 
 
 .hotelbrands-top-row {
   width: 1920px;
@@ -84,4 +83,4 @@ img {
 .hotelbrands-dashboard,
 _:-ms-lang(x) {
   margin-top: 7px;
-}
+} */
